--- a/SellSnap/Info.plist
+++ b/SellSnap/Info.plist
@@ -2,18 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location Access?</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Location Access?</string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Galano Grotesque Alt Semi Bold.otf</string>
-		<string>Galano Grotesque Bold.otf</string>
-		<string>Galano Grotesque Extra Bold.otf</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>SaleSnap</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,6 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location Access?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location Access?</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Galano Grotesque Alt Semi Bold.otf</string>
+		<string>Galano Grotesque Bold.otf</string>
+		<string>Galano Grotesque Extra Bold.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
